# SciDER

./: .Dockerignore  .env.template  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  claude_test.ipynb  debug.ipynb  pyproject.toml  requirements-space.txt  requirements.txt  requirements_lg.txt  test.py
bench/: mlebench_workflow.py
bench/register_models/: gemini.py  gpt.py
bench_workflows/: README.md  mlebench_workflow.py  scicodebench_workflow.py
bench_workflows/register_models/: gemini.py  gpt.py
benchmarks/: .gitignore  README.md
benchmarks/aiideabench/: .gitignore  README.md  requirements.txt
benchmarks/datascibench/: README.md
benchmarks/mlebench/: README.md
benchmarks/mlebench/agent_docker/: Dockerfile  config.yaml  requirements.txt  start.sh
benchmarks/scicodebench/: README.md
reasoning_bank/: README.md  mem_induction.py  mem_manage.py
scider/: history_compression.py
scider/agents/: dummy_agent.py
scider/agents/critic_agent/: __init__.py  build.py  execute.py  state.py
scider/agents/data_agent/: __init__.py  build.py  execute.py  plan.py  state.py
scider/agents/data_agent/paper_subagent/: __init__.py  build.py  execute.py  state.py
scider/agents/experiment_agent/: __init__.py  build.py  execute.py  state.py
scider/agents/experiment_agent/coding_subagent_v2/: execute.py  state.py
scider/agents/ideation_agent/: __init__.py  build.py  execute.py  state.py
scider/core/: brain.py  code_env.py  constant.py  errors.py  openhands_import.py  types.py
scider/core/exec/: __init__.py  manager.py  pty_session.py  session_base.py
scider/default/models/: __init__.py  gemini.py  gpt.py
scider/prompts/: __init__.py  data_prompt.yaml  dummy_prompt.yaml  experiment_agent_prompt.yaml  experiment_claude_coding_prompt_v2.yaml  experiment_coding_prompt_v2.yaml  experiment_summary_prompt.yaml  history_prompt.yaml  paper_subagent_prompt.yaml
scider/prompts/skills/: uv.md
scider/rbank/: utils.py
scider/rbank/subgraph/: mem_consolidation.py  mem_extraction.py  mem_persistence.py  mem_retrieval.py
scider/tools/: __init__.py  claude_agent_sdk_tool.py  claude_code_tool.py  coder_tool.py  cursor_tool.py  dataset_search_tool.py  exec_tool.py  fs_tool.py  github_tool.py  history_tool.py  ideation_tool.py  metric_search_tool.py  openhands_tool.py  registry.py  state_tool.py  todo_tool.py
scider/utils/: serial.py
scider/workflows/: __init__.py  data_workflow.py  experiment_workflow.py  full_workflow.py  full_workflow_with_ideation.py  ideation_workflow.py  utils.py
scievo/: history_compression.py  llms.py  run_workflow.py  types.py  workflow.py
scievo/agents/: data_agent.py  dummy_agent.py  dummy_agent_2.py
scievo/agents/critic_agent/: execute.py  state.py
scievo/agents/data_agent/: build.py  execute.py  plan.py  state.py
scievo/agents/data_agent/paper_subagent/: build.py  (+2 more)
scievo/agents/experiment_agent/: __init__.py  build.py  execute.py  experiments.md  plan.py  state.py
scievo/agents/ideation_agent/: build.py  execute.py  state.py
scievo/core/: __init__.py  brain.py  code_env.py  constant.py  global_state.py  llms.py  logger.py  meta_chain.py  openhands_import.py  plan.py  registry.py  types.py  util.py  utils.py
scievo/core/exec/: __init__.py  pty_session.py  session_base.py
scievo/core/shell_exec/: pty_session.py
scievo/default/models/: __init__.py  gemini.py  gpt.py
scievo/memory/: ctx_compress.py  utils.py
scievo/prompts/: critic_prompt.yaml  data_prompt.yaml  experiment_agent_prompt.yaml  experiment_coding_prompt.yaml  experiment_coding_prompt_v2.yaml  experiment_exec_prompt.yaml  experiment_prompt.yaml  experiment_summary_prompt.yaml  ideation_prompt.yaml  paper_subagent_prompt.yaml  prompt_data.py  rbank_prompt.yaml
scievo/rbank/: memo.py
scievo/rbank/subgraph/: mem_consolidation.py  mem_extraction.py  mem_persistence.py  mem_retrieval.py
scievo/tools/: __init__.py  arxiv_tool.py  claude_agent_sdk_tool.py  claude_code_tool.py  coder_tool.py  coder_tool_old.py  cursor_tool.py  cursor_tool_new.py  dataset_search_tool.py  dummy_tool.py  env_tool.py  exec_tool.py  fs_tool.py  github_tool.py  history_tool.py  ideation_tool.py  metric_search_tool.py  noop.py  openhands_tool.py  plan_tool.py  shell_tool.py  state_tool.py  web_tool.py
scievo/utils/: serial.py
scievo/workflows/: __init__.py  data_workflow.py  experiment_workflow.py  full_workflow.py  full_workflow_with_ideation.py  ideation_workflow.py
scievo_lg/: constant.py  llms.py  types.py
scievo_lg/agents/: data_agent.py  dummy_agent.py
scievo_lg/prompts/: __init__.py  prompt_data.py
scievo_lg/tools/: __init__.py  dummy_tool.py
streamlit-client/: .dockerignore  .gitignore  AUTOMATIC_NODE_MONITORING.md  CHANGES_SUMMARY.md  CONVERSATION_VIEW_INTEGRATION.md  DEVELOPMENT_SUMMARY.md  Dockerfile  LOGGER_DISPLAY_GUIDE.md  NODE_MONITORING_GUIDE.md  QUICK_START.md  README.md  README_DOCKER.md  app.py  app_chat.py  app_enhanced.py  display_components.py  docker-compose.yml  example_config.yaml  logger_handler.py  node_monitor_wrapper.py  requirements.txt  run.bat  run.sh  test_setup.py  workflow_monitor.py
streamlit-client/case-study-memory/memo_1/: chat_history.json
streamlit-client/case-study-memory/memo_2/: chat_history.json
streamlit-client/case-study-memory/memo_3/: chat_history.json
streamlit-client/case-study-memory/memo_4/: chat_history.json
workspace/: CHANGELOG.md  EXECUTION_INSTRUCTIONS.md  EXECUTION_SUMMARY.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  REVISION_2_HANDOFF.md  REVISION_2_SUMMARY.md  USAGE_GUIDE.md  main.py  pyproject.toml  requirements.txt  test_installation.py
workspace/experiment_analyses/: revision_0_analysis.md  revision_1_analysis.md
workspace/models/: xgboost.joblib
workspace/results/: detailed_results.json  model_comparison.csv
workspace/src/wine_quality_ml/: __init__.py  data_loader.py  eda.py  models.py  trainer.py  visualizer.py
(+37 files in other folders)
