[project]
name = "wine-quality-ml"
version = "0.1.0"
description = "Machine Learning project for wine quality prediction"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "joblib>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
